# conduit-ai

./: .gitignore  MODULE.bazel  README.md  requirements.in  requirements.txt
data/config/: sample_function_call_config.json  sample_job_config.json  sample_step_config.json  sample_task_config.json
llm_scheduler/: BUILD  main.py
llm_scheduler/config_schema/: BUILD  execution_schema.py
llm_scheduler/config_tools/: BUILD  config_reader.py  create_sample.py
llm_scheduler/execution_environment/: BUILD  execution_environment.py
llm_scheduler/executor/: BUILD  builder.py  executor.py
llm_scheduler/executor/function_call/: BUILD  function_executor.py
llm_scheduler/executor/function_call/logging/: BUILD  gcp_firestore_log.py
llm_scheduler/executor/model_query/: BUILD  claude_executor.py  gemini_executor.py
llm_scheduler/runner/: BUILD  step_runner.py  task_runner.py
